--- a/.github/workflows/TestCases.yml
+++ b/.github/workflows/TestCases.yml
@@ -25,6 +25,11 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
+      - name: Test DB_KEY Secret Access
+        run: echo "DB_KEY is available"
+        env:
+          DB_KEY: ${{ secrets.DB_KEY }}
+
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
