--- a/lo-ohm/Backend/global.env
+++ b/lo-ohm/Backend/global.env
@@ -1,1 +1,6 @@
 *env variables*
+MONGODB_URI="mongodb+srv://LoOhm:OhmLo@loohm.z6ji1.mongodb.net/?retryWrites=true&w=majority&appName=LoOhm"
+JWT_SECRET_KEY="UHIRA&r89h4w9837h&9HAFEu0j49hwiajioafnb3uqort4380U3GR8TQIBo3uu8q3"
+TEST_VAR="test"
+EMAIL_USER="loohmswe@gmail.com"
+EMAIL_PASSWORD="fcpawreojwpibgyc"
